	even when the data were transformed for the ordination. The change
	is minimal: data are evaluated similarly as in metaMDSdist if
	wascores are requested. An alternative would have been to split
	data manipulation function into an independent function from
	metaMDSdist, but I try this first. For compatibility reasons, the
	previous behaviour can be re-established using argument old.wa =
	TRUE.
	
Version 1.12-5 (closed Mar 24, 2008)

	* plot.procrustes: could fail if compared configurations were
	numerically identical.

	* allPerms: New function to enumerate all possible permutations
	for a given permutation scheme and number of samples. Has 'print'
	and 'summary' methods.

	* numPerms: Now accepts a numeric or integer vector of length 1
	as the first argument 'object'. If supplied it is expanded to
	seq(from = 1, to = object). This change allows you to state the
	number of observations rather than pass an object from which the 
	number of observations is deduced. Updated and clarified 
	documentation in this regard.
	
Version 1.12-4 (closed Mar 20, 2008)
	
	* permDisper: Added pairwise comparisons of group dispersions 
	via a classical t test and via permutation test, accessed via
	new argument 'pairwise = TRUE'. 'permDisper' is now documented
	seperately from 'betadisper'.

	* TukeyHSD.betadisper: A method for 'TukeyHSD' to calculate
	Tukey's Honest Significant Differences for the grouping factor
	in 'betadisper'.

	* numPerms: Was incorrectly calculating the number of permutations
	when permuting levels of strata was performed. numPerms was also
	incorrectly reporting too many permutations in the particular
	case of type="grid" and mirror=TRUE with ncol=2.

	* permuted.index2: When permuting levels of 'strata'
	(type = "strata"), permuted.index2 was shuffling both the levels 
	of strata *and* shuffling the samples within levels. The latter 
	was incorrect and is now fixed.
	
Version 1.12-3 (closed Mar 9, 2008)
