@@ -14,6 +14,17 @@ Version 1.12-6 (opened Mar 24, 2008)
 	metaMDSdist, but I try this first. For compatibility reasons, the
 	previous behaviour can be re-established using argument old.wa =
 	TRUE.
+
+	* allPerms: Now allows unbalanced designs for "series" or "free"
+	permutations within levels of strata only (i.e. allows different
+	number of observations per level of strata). Unbalanced "grid" 
+	designs are not supported (and are unlikely to be so in the near
+	future). permuted.index2 has allowed these cases from the
+	beginning.
+
+	* allPerms, numPerms: Corrected for situations where type = "series",
+	mirror = TRUE with only 2 observations. In this case, mirroring
+	does not double the number of permutations.
 	
 Version 1.12-5 (closed Mar 24, 2008)
 
